View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029282 | Open CASCADE | OCCT:Data Exchange | public | 2017-10-31 17:28 | 2018-06-29 21:19 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029282: Data Exchange - UpdateAssemblies is not working for located root assemblies | ||||
Description | If root assembly has its own location, i.e. free shape is an instance for main assembly, UpdateAssemblies method will not work. | ||||
Steps To Reproduce | bugs xde bug29282 | ||||
Additional information and documentation updates | box b 1 1 1 box bb 2 1 1 compound b c ttranslate c 0 1 0 XNewDoc D XAddShape D c XSetShape D 0:1:1:3 bb XUpdateAssemblies D XGetOneShape result D --> (box 1 1 1) instead of new (box 2 1 1) Close D | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde bug29282 | ||||
|
Branch CR29282 has been created by ika. SHA-1: 4d791a3ccb31a32f161534cab5b64f0091d3c7c7 Detailed log of new commits: Author: ika Date: Mon Oct 30 18:04:12 2017 +0300 0029282: Data Exchange - UpdateAssemblies is not worked for located root assemblies Add check for located root assemblies. |
|
Branch CR29282 has been updated forcibly by ika. SHA-1: 11c0e2f27ad8739958cdbde3c4efe0ca5a09cb50 |
|
Branch CR29282 has been updated forcibly by ika. SHA-1: f64ad4dcc758659df9df5b855955e044c7bdace2 |
|
Dear SSV, check for located root assemblies was added to method XCAFDoc_ShapeTool::UpdateAssemblies() could you please review branch CR29282? testgrid summaries: Windows file://///VIRTEX/dn53/tests_results/CR29282-master-ika-OCCT/Windows-64-VC10/summary.html http://occt-tests/CR29282-master-ika-Products/Windows-64-VC10/summary.html Debian file://///VIRTEX/dn53/tests_results/CR29282-master-ika-OCCT/Debian70-64/summary.html http://occt-tests/CR29282-master-ika-Products/Debian70-64/summary.html |
|
Reviewed. Please, test and integrate. |
|
Combination - OCCT branch : CR29282 SHA-1: f64ad4dcc758659df9df5b855955e044c7bdace2 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29282 has been deleted by kgv. SHA-1: f64ad4dcc758659df9df5b855955e044c7bdace2 |
occt: master b2e3ec8d 2017-10-30 15:04:12
Committer: bugmaster Details Diff |
0029282: Data Exchange - UpdateAssemblies is not working for located root assemblies Add check for located root assemblies. |
Affected Issues 0029282 |
|
mod - src/XCAFDoc/XCAFDoc_ShapeTool.cxx | Diff File | ||
add - tests/bugs/xde/bug29282 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-10-31 17:28 |
|
New Issue | |
2017-10-31 17:28 |
|
Assigned To | => ika |
2017-10-31 17:46 | git | Note Added: 0071878 | |
2017-10-31 18:29 |
|
Summary | Data Exchange - UpdateAssemblies is not worked for located root assemblies => Data Exchange - UpdateAssemblies is not workштп for located root assemblies |
2017-10-31 18:29 |
|
Summary | Data Exchange - UpdateAssemblies is not workштп for located root assemblies => Data Exchange - UpdateAssemblies is not working for located root assemblies |
2017-11-01 11:35 | git | Note Added: 0071890 | |
2017-11-01 12:40 | git | Note Added: 0071898 | |
2017-11-01 12:47 |
|
Note Added: 0071900 | |
2017-11-01 12:47 |
|
Assigned To | ika => ssv |
2017-11-01 12:47 |
|
Status | new => resolved |
2017-11-01 12:47 |
|
Steps to Reproduce Updated | |
2017-11-01 13:23 |
|
Note Added: 0071909 | |
2017-11-01 13:23 |
|
Assigned To | ssv => bugmaster |
2017-11-01 13:23 |
|
Status | resolved => reviewed |
2017-11-01 15:03 | bugmaster | Test case number | => bugs xde bug29282 |
2017-11-01 15:06 | bugmaster | Note Added: 0071913 | |
2017-11-01 15:06 | bugmaster | Status | reviewed => tested |
2017-11-02 18:34 | bugmaster | Changeset attached | => occt master b2e3ec8d |
2017-11-02 18:34 | bugmaster | Status | tested => verified |
2017-11-02 18:34 | bugmaster | Resolution | open => fixed |
2017-11-08 18:24 | git | Note Added: 0072084 | |
2018-02-17 23:36 | abv | Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |