0029282: Data Exchange - UpdateAssemblies is not working for located root assemblies

Add check for located root assemblies.